Add GET /nodes/{node_id}/am_i_responsible endpoint
